data is being filtered and differentiates if its a staff logged in or a user client logged in to show tickets

--- a/src/components/tickets/ticketList.css
+++ b/src/components/tickets/ticketList.css
@@ -5,8 +5,8 @@ flex-direction: column;
 
 .ticket {
     background-color: lightblue;
-    padding: 3em;
-    margin: 1.5em;
-    border: 1.5px dotted rgba(29, 184, 208, 0.747);
-    border-radius: 3em;
+    padding: 2em;
+    margin: .5em;
+    border: .5px dotted rgba(29, 184, 208, 0.747);
+    border-radius: 1.3em;
 }
